# mdserve

./: .gitignore  BUILD.bazel  MODULE.bazel  README.md  cli.go  cli_test.go  config.go  config_test.go  filter.go  filter_test.go  go.mod  go.sum  go.work  go.work.sum  handler.go  handler_test.go  hub.go  hub_test.go  main.go  main_test.go  parser.go  parser_test.go  server.go  tree.go  tree_test.go  watcher.go
.agents/: AGENTS.md
.github/workflows/: ci.yml
docs/: diagrams.md  footnotes.md  installation.md  tables.md
docs/design/: 2026-07-12-rearchitecture.md  footnotes.md
gitignore/: BUILD.bazel  gitignore.go  gitignore_test.go
go/cmd/devtool/: BUILD.bazel  chat.go  go.mod  main.go  mcp.go  screenshot.go  vendor.go
templates/: chat.html  main.html
wtserver/: bridge.go  wtserver.go
